<resources>
    <string name="app_name">DigiHealthLocker</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_word">Continue</string>
    <string name="not_now">Not now</string>
    <string name="app_slogan">Your Health. Your Records. Anytime. Anywhere.</string>
    <string name="welcome_message">Welcome to DigiHealthLocker</string>
    <string name="login">Sign in</string>
    <string name="or">OR</string>
    <string name="create_account">Sign UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_here">New here?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_to_digihealthlocker">Welcome to DigiHealthLocker!</string>
    <string name="app_slogan_2">Access and manage your health records with ease.</string>
    <string name="background_image">Background image</string>
    <string name="enter_email_phone_hint_message_1">Email or Phone Number</string>
    <string name="enter_password_hint_message">Enter Password</string>
    <string name="create_new_password_hint_message">Create New Password</string>
    <string name="confirm_new_password_hint_message">Confirm New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_to_digihealthlocker">New to DigiHealthLocker?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_passkey">Sign-in with passkey</string>
    <string name="other_ways_to_sign_in">Other ways to Sign-In</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="our_features">Our Features</string>
    <string name="feature_digital_records">• Digital Records</string>
    <string name="feature_instant_access">• 24/7 Access</string>
    <string name="feature_secure_sharing">• Secure Sharing</string>
    <string name="feature_abha_linked">• ABHA Linked</string>
    <string name="feature_unified_history">• Unified History</string>
    <string name="feature_doctor_sync">• Doctor Sync</string>
    <string name="feature_complete_privacy">• Complete Privacy</string>
    <string name="feature_your_data_your_control">• Full Control</string>
    <string name="feature_your_health_wallet">• Your Health Wallet</string>
    <string name="email_verification_message">A verification link has been sent to your email. Please click it to verify.</string>
    <string name="email_verification_title">Verify your email</string>
    <string name="didn_t_receive_email">Didn\'t receive email?</string>
    <string name="didn_t_receive_verification_code">Didn\'t Verification Code?</string>
    <string name="resend">Resend</string>
    <string name="phone_verification_title">Verify your Phone Number</string>
    <string name="create_passkey_title">Create a passkey to sign in to DigiHealthLocker?</string>
    <string name="create_passkey_digihealthlocker">Create a passkey for DigiHealthLocker?</string>
    <string name="create_passkey_message">This passkey will be saved to Google Password Manager for ${username}$. You can use it on other devices, and your screen lock will be used to encrypt your data.</string>
    <string name="phone_number_verification_message">A verification code has been sent to your phone number. Please enter it below to verify phone number</string>
    <string name="i_ve_verified">I’ve Verified</string>
    <string name="update_user_details">Update User Details</string>
    <string name="google_password_manager">Google Password Manager</string>
    <string name="use_screen_lock">Use your screen lock</string>
    <string name="touch_fingerprint">Touch the fingerprint sensor</string>
</resources>