<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_user_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginUserActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background_2_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/app_logo_super_big_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_digihealthlocker"
        android:layout_marginTop="20dp"
        android:textColor="#518085"
        android:textFontWeight="900"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <!-- Google Sign-In Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginWithGoogleBtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="#E8EAF6"
        android:text="@string/continue_with_google"
        android:textColor="#518085"
        android:textSize="18sp"
        app:icon="@drawable/google_removebg"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:cornerRadius="38dp"
        app:strokeColor="#518085"
        app:strokeWidth="2dp"
        app:elevation="4dp"
        android:layout_marginTop="20dp"
        app:iconSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Phone Login Button -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginWithPhoneBtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#E8EAF6"
        android:text="@string/continue_with_phone"
        android:textColor="#518085"
        android:textSize="18sp"
        app:cornerRadius="28dp"
        app:elevation="4dp"
        app:icon="@drawable/phone_removebg_preview"
        app:iconTint="@null"
        app:iconSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWithGoogleBtn"
        app:strokeColor="#518085"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/orSeparatorLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWithGoogleBtn">

        <View
            android:layout_width="1dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#518085" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/or"
            android:textColor="#518085"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#518085" />
    </LinearLayout>

    <TextView
        android:id="@+id/footerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="@string/app_slogan_2"
        android:textColor="#518085"
        android:textFontWeight="900"
        android:textSize="15sp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWithPhoneBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
